2008-06-22  Jonathon Jongsma  <jonathon.jongsma@collabora.co.uk>

        Reviewed by Darin Adler.

        Test for https://bugs.webkit.org/show_bug.cgi?id=19465
        Bug 19465: Cursor sometimes gets 'stuck' in textareas when trying to navigate with arrow keys

        * editing/input/textarea-arrow-navigation.html:
        * editing/input/textarea-arrow-navigation-expected.html: Added.

2008-06-22  Robert Blaut  <webkit@blaut.biz>

        Reviewed by Darin Adler.

        Test for https://bugs.webkit.org/show_bug.cgi?id=17421
        Bug 17421: Lack of end tag for SELECT element causes the rest of page to not be rendered

        * fast/parser/input-textarea-inside-select-element-expected.txt: Added.
        * fast/parser/input-textarea-inside-select-element.html: Added.

2008-06-22  Robert Blaut  <webkit@blaut.biz>

        Reviewed by Darin Adler.

        Test for https://bugs.webkit.org/show_bug.cgi?id=19520
        Bug 19520: WebKit incorrectly accepts hidden as the value of outline-style

        * fast/css/outline-hidden-illegal-value-expected.txt: Added.
        * fast/css/outline-hidden-illegal-value.html: Added.

2008-06-21  David Kilzer  <ddkilzer@apple.com>

        Bug 7931: Escaped elements within a textarea block can cause the textarea box to be closed prematurely

        <https://bugs.webkit.org/show_bug.cgi?id=7931>

        Reviewed by Darin.

        The entity-end-textarea-tag.html contains 11 test cases:  one
        for each character in '</textarea>'.  The rest of the tests
        only test one encoding:  '<' as '&lt;'.

        * fast/parser/entity-end-iframe-tag-expected.txt: Added.
        * fast/parser/entity-end-iframe-tag.html: Added.
        * fast/parser/entity-end-script-tag-expected.txt: Added.
        * fast/parser/entity-end-script-tag.html: Added.
        * fast/parser/entity-end-style-tag-expected.txt: Added.
        * fast/parser/entity-end-style-tag.html: Added.